fast scan of AIIA article

--- a/doc/papers/15-AIIA/swarch.tex
+++ b/doc/papers/15-AIIA/swarch.tex
@@ -26,7 +26,7 @@ The main software components that will be developed for control, reasoning and i
 \item T2.2 Situation Awareness
 \item T3.1 Multimodal HRI
 \item T3.2 Human needs estimation
-\item T4.1 Robust navigation (Sapienza)
+\item T4.1 Robust navigation %(Sapienza)
 \item T4.2 Multi-robot planning
 \end{itemize}
 
