--- a/doc/papers/15-AIIA/main.tex
+++ b/doc/papers/15-AIIA/main.tex
@@ -38,7 +38,7 @@ Cooperative Autonomous Robots in Complex and Human Populated Environments}
 $^1$ Department of Computer, Control, and Management Engineering\\ 
 Sapienza University of Rome, Italy\\
 $^2$ ...
-$^3$ ...
+$^3$ GREYC, University of Caen Lower-Normandy, France
 $^4$ ...
 }
 
@@ -56,9 +56,9 @@ $^4$ ...
 Public spaces in large cities are increasingly becoming complex, more hostile and  
 unpleasant to use because of the overcrowding, rush and complex information in signboards. 
 It is in the interest of cities to make their public spaces easier to use, friendlier to visitors and safer to increasing elderly population and to the people with disabilities. 
-Meanwhile, we observe, in the last decade a tremendous progress in the development of robots in dynamic, complex and uncertain environments. The new challenge for the near future is to deploy the robots in public spaces to make easier and safer the use of these spaces. 
+Meanwhile, we observe in the last decade a tremendous progress in the development of robots in dynamic, complex and uncertain environments. The new challenge for the near future is to deploy the robots in public spaces to make easier and safer the use of these spaces. 
 
-In this paper, we provide an overview of the COACHES project which addresses fundamental issues related to the design and development of autonomous robots with high-level skills for environment modeling and scene understanding, distributed autonomous decision-making, short-term interacting with humans and robust and safe navigation in overcrowding spaces. 
+In this paper, we provide an overview of the COACHES project which addresses fundamental issues related to the design and development of autonomous robots with high-level skills for environment modeling and scene understanding, distributed autonomous decision-making, short-term interaction with humans and robust and safe navigation in overcrowded spaces. 
 In particular, we describe the main components in which Artificial Intelligence techniques are used and integrated with the robotic system, as well as implementation details and some preliminary tests of these components. The implementation and the performed tests confirm the suitable integration of AI and robotics techniques to solve complex problems in complex environments, where human-robot interaction is a key feature.
 
 \end{abstract}
