15-AIIA paper updates

--- a/doc/papers/15-AIIA/impl.tex
+++ b/doc/papers/15-AIIA/impl.tex
@@ -3,12 +3,6 @@
 \todo{The COACHES robots are under construction, so we use a simulator...}
 
 
-\begin{figure}
-\centering
-\includegraphics[width=0.75\textwidth]{fig/diago.png}
-\caption{Diago robot at Sapienza University.}
-\label{fig:diago}
-\end{figure}
 
 
 
@@ -37,7 +31,7 @@ The following tests have been performed in the simulator to verify the suitabili
 
 \begin{itemize}
 \item Simple Move-To behavior: moving the robot from one place to another allows for testing the map description, path planning, and the global architecture.
-\item Patrol behavior: moving the robot across several places allows for testing the sequencial decision-making, along with the dynamic addition of new places to visit or new obstacles.
+\item Patrol behavior: moving the robot across several places allows for testing the sequential decision-making, along with the dynamic addition of new places to visit or new obstacles.
 \item Simple interaction: going to some people for initiating an interaction allows for testing the difficulties introduced by non-stationary goals, along with the dialog system. It also makes it easier to test for branching behaviors since the dialogs may have several different outcomes.
 \end{itemize}
 
