--- a/doc/papers/15-AIIA/intro.tex
+++ b/doc/papers/15-AIIA/intro.tex
@@ -8,6 +8,22 @@ including people. The new challenge for the near future is that robots will be d
 
 Such application domains require robots with new capabilities leading to new scientific challenges: robots should assess the situation, estimate the needs of people, socially interact in a dynamic way and in a short time, with many people, the navigation should be safe and respects the social norms. These capabilities require new skills including robust and safe navigation, robust image and video processing, short-term human-robot interaction models, human need estimation techniques and distributed and scalable multi-agent planning.
 
-...
+\begin{figure}
+\centering
+\includegraphics[width=0.65\textwidth]{fig/rivedelorne}
+\hspace{0.8cm}
+\includegraphics[width=0.255\textwidth]{fig/diago1}
+\caption{\coaches environment and robot.}
+\label{fig:env}
+\end{figure}
+
+In the \coaches project, we aim at further developing this technology, but specifically study, develop and test integration of Artificial Intelligence and Robotics technology in order to develop robots that can suitable interact with users in a complex large public environment, like a shopping mall.
+Figure \ref{fig:env} shows the \emph{Rive de l'orne} shooping mall in Caen (France) where the experimental activities of the project will be carried out, as well as a prototype of the robot that will be used.
+
+As shown in the figure, in contrast with previous work social robotics and human-robot interaction, the environment is very challenging, because populated by many people, and the required level of ``intelligence'' of the robot in order to adequately perform complex and effective tasks in this environment in presence of people is very high.
+
+The \coaches project (October 2014 - September 2017) will provide important insights for actual deployment of intelligent social robots in large populated public areas. 
+In this paper, we describe the main overall architecture of the system, mostly focusing on the components that implement the integration between Artificial Intelligence and Robotics techniques, and some preliminary results of such an integration, showing the feasibility of the proposed architecture.
+
 
 
