--- a/doc/papers/15-AIIA/main.tex
+++ b/doc/papers/15-AIIA/main.tex
@@ -17,7 +17,7 @@
 %\newcommand{\todo}[1]{}
 
 
-\def\coaches{ {\bf COACHES}}
+\def\coaches{{\tt COACHES} }
 
 \begin{document}
 %
@@ -58,7 +58,7 @@ unpleasant to use because of the overcrowding, rush and complex information in s
 It is in the interest of cities to make their public spaces easier to use, friendlier to visitors and safer to increasing elderly population and to the people with disabilities. 
 Meanwhile, we observe in the last decade a tremendous progress in the development of robots in dynamic, complex and uncertain environments. The new challenge for the near future is to deploy the robots in public spaces to make easier and safer the use of these spaces. 
 
-In this paper, we provide an overview of the COACHES project which addresses fundamental issues related to the design and development of autonomous robots with high-level skills for environment modeling and scene understanding, distributed autonomous decision-making, short-term interaction with humans and robust and safe navigation in overcrowded spaces. 
+In this paper, we provide an overview of the \coaches project which addresses fundamental issues related to the design and development of autonomous robots with high-level skills for environment modeling and scene understanding, distributed autonomous decision-making, short-term interaction with humans and robust and safe navigation in overcrowded spaces. 
 In particular, we describe the main components in which Artificial Intelligence techniques are used and integrated with the robotic system, as well as implementation details and some preliminary tests of these components. The implementation and the performed tests confirm the suitable integration of AI and robotics techniques to solve complex problems in complex environments, where human-robot interaction is a key feature.
 
 \end{abstract}
@@ -72,16 +72,16 @@ In particular, we describe the main components in which Artificial Intelligence 
 
 \input{impl}
 
-
+\input{conclu}
 
 \section*{Acknowledgements}
 
-\coaches ~ is funded within the CHIST-ERA program ...
+\todo{\coaches is funded within the CHIST-ERA program ...}
 
-\begin{small}
+%\begin{small}
 \bibliographystyle{plain}
-\bibliography{bib/inc-short,bib/2000-2004,bib/2005-2009,bib/2010-2014}
-\end{small}
+\bibliography{coaches}
+%\end{small}
 
 
 \end{document}
