--- a/doc/papers/15-RSS_aicogscirobo2015/MDP_PNP.tex
+++ b/doc/papers/15-RSS_aicogscirobo2015/MDP_PNP.tex
@@ -3,7 +3,8 @@
 In classical on-line planning, execution monitoring is used to determine the correct execution of the planned action. When some action fails the execution monitoring is able to determine a new initial state and request for a re-planning to the planner component from this new initial state.
 In general, this mechanism does not change the model of the domain (i.e., the domain description), therefore this approach is suitable as soon as the cause of the failure is somewhat modeled in the domain description, in such a way that a new re-planning will avoid this situation.
 
-However, very often, it is not possible to anticipate and model all the possible causes of failures for the actions. In these cases, the planner may not be able to find for alternative solutions with respect to the ones that failed. For example, in a domain in which a robot can open doors with its arms and in which the fact that doors may be locked is not modeled in the domain description, a plan can be generated containing an action to open a door. When this action fails, the planner would re-plan to open this door again. Since the fact that it must be unlocked is not modeled in the preconditions of this action.
+However, very often, it is not possible to anticipate and model all the possible causes of failures for the actions. In these cases, the planner may not be able to find for alternative solutions with respect to the ones that failed. For example, in a domain in which a robot can open doors with its arms and in which the fact that doors may be locked is not modeled in the domain description, a plan can be generated containing an action to open a door. When this action fails, the planner would re-plan to open this door again, since the fact that it must be unlocked is not modeled in the preconditions of this action.
+While what would be needed in this case is to upgrade the model adding a representation of the property of a door to be locked and unlocked.
 
 
 The general approach that we will follow in this work includes three general modules: a planner, an executor, and a model updater. The three modules will cooperate during the execution of a complex task for a robot, including many failures of the planned actions, providing for a feedback mechanism from execution to planning.
