--- a/doc/papers/15-AIIA/main.tex
+++ b/doc/papers/15-AIIA/main.tex
@@ -27,7 +27,7 @@
 %
 %\mainmatter              % start of the contributions
 %
-\title{\coaches\\
+\title{COACHES\\
 Cooperative Autonomous Robots in Complex and Human Populated Environments}
 %
 %\titlerunning{SPQR}  % abbreviated title (for running head)
