--- a/doc/papers/15-AIIA/swarch.tex
+++ b/doc/papers/15-AIIA/swarch.tex
@@ -19,18 +19,23 @@ ROS provides the middleware infrastructure to effectively share information amon
 
 The main software components that will be developed for control, reasoning and interaction functionalities of the system are listed below.
 
+\todo{Complete this list}
 \begin{itemize}
-\item {\bf T1.1} KB modeling
-\item {\bf T1.2} KB reasoning
-\item {\bf T2.1} Image Processing
-\item {\bf T2.2} Situation Awareness
-\item {\bf T3.1} Multi-modal HRI
-\item {\bf T3.2} Human needs estimation
-\item {\bf T4.1} Robust navigation %(Sapienza)
-\item {\bf T4.2} Multi-robot planning
+\item \emph{Scene analysis}
+
+\item \emph{Multi-modal HRI}
+
+\item \emph{Knowledge-based representation and reasoning}
+
+\item \emph{Planning and execution monitoring}
+
+\item \emph{Safe navigation}
 \end{itemize}
 
-In the next section we will detail the components where Artificial Intelligence techniques have a fundamental role.
+In the next section we will detail the components 
+\emph{Knowledge-based representation and reasoning} and
+\emph{Planning and execution monitoring},
+where Artificial Intelligence techniques have a fundamental role.
 
 
 
