15-AIIA paper updates

--- a/doc/papers/15-AIIA/coaches.bib
+++ b/doc/papers/15-AIIA/coaches.bib
@@ -62,4 +62,14 @@ year = 2014
 }
 
 
+@inproceedings{CarMouIjcai01,
+  author = {Cardon, S. and Mouaddib, A.-I. and Zilberstein, S. and Washington, R.},
+  booktitle = {Proc. of IJCAI},
+  pages = {701-706},
+  title = {Adaptive Control of Acyclic Progressive Processing Task Structures},
+  year = 2001
+}
+
+
+
 
