--- a/doc/papers/15-AIIA/main.tex
+++ b/doc/papers/15-AIIA/main.tex
@@ -3,7 +3,7 @@
 \usepackage{epsfig}
 \usepackage{color}
 
-\renewcommand{\baselinestretch}{0.999}
+\renewcommand{\baselinestretch}{0.98}
 
 %\setlength{\topmargin}{-0.5cm}
 %\setlength{\oddsidemargin}{0.5cm}
@@ -35,11 +35,12 @@ Cooperative Autonomous Robots in Complex and Human Populated Environments}
 %                                     \toctitle is used
 %
 \author{L. Iocchi$^1$,  E. Erdem$^2$,  L. Jeanpierre$^3$, A.-I. Mouaddib$^3$, H. Sahli$^4$ \\
-$^1$ Department of Computer, Control, and Management Engineering\\ 
+$\,$\\
+$^1$ DIAG, % Department of Computer, Control, and Management Engineering\\ 
 Sapienza University of Rome, Italy\\
-$^2$ ...
-$^3$ GREYC, University of Caen Lower-Normandy, France
-$^4$ ...
+$^2$ Sabanci University, Turkey \\
+$^3$ GREYC, University of Caen Lower-Normandy, France\\
+$^4$ Vrije Universiteit Brussel, Belgium
 }
 
 \institute{}
@@ -76,7 +77,9 @@ In particular, we describe the main components in which Artificial Intelligence 
 
 \section*{Acknowledgements}
 
-\todo{\coaches is funded within the CHIST-ERA program ...}
+\coaches is funded within the CHIST-ERA 4$^{th}$ Call for Research projects, 2013,
+Adaptive Machines in Complex Environments (AMCE) Section.
+
 
 %\begin{small}
 \bibliographystyle{plain}
