--- a/doc/papers/15-AIIA/swarch.tex
+++ b/doc/papers/15-AIIA/swarch.tex
@@ -19,17 +19,17 @@ ROS provides the middleware infrastructure to effectively share information amon
 
 The main software components that will be developed for control, reasoning and interaction functionalities of the system are listed below.
 
-\todo{Complete this list}
 \begin{itemize}
-\item \emph{Scene analysis}
+\item \emph{Scene analysis}, including sensor processing procedures for both on-board robot devices and static sensors in order to determine the current situation and understand events that are of interest for the system.
 
-\item \emph{Multi-modal HRI}
+\item \emph{Multi-modal HRI}, defining a set of modalities for human-robot interaction, including speech recognition and synthesis, touch interaction, graphical interface on a screen mounted on the robot and Web interfaces.
 
-\item \emph{Knowledge-based representation and reasoning}
+\item \emph{Knowledge-based representation and reasoning}, defining the formalism and the procedure to represent and reason about the environment and the task of the robots.
 
-\item \emph{Planning and execution monitoring}
+\item \emph{Planning and execution monitoring}, for generating the plans to achieve the desired goals and monitor their execution for robust behaviors.
 
-\item \emph{Safe navigation}
+\item \emph{Safe navigation}, for guaranteeing safety operations of the robot in a populated environment.
+
 \end{itemize}
 
 In the next section we will detail the components 
