--- a/doc/papers/15-AIIA/AI.tex
+++ b/doc/papers/15-AIIA/AI.tex
@@ -56,7 +56,6 @@ Predicates are also used to denote properties of objects. For example, given the
 \noindent
 will represent the color property \emph{red} of the particular object  \emph{dress\_123}.
 
-\todo{Reasoning ... also based on the feedback coming from execution.}
 
 
 
@@ -88,6 +87,14 @@ where \emph{door12} $\in$ \emph{Door} \emph{area1}, \emph{area2} $\in$ \emph{Are
 \end{quote}
 
 
+%\vspace{1em}
+
+\noindent 
+\textbf{Reasoning} 
+
+
+The KB is used by reasoning procedures that will be implemented in order to reason about the current situation and to define a set of goals that the \coaches robots have to achieve.
+To this end, the reasoning engine takes into account the available information in the KB related to: semantic map, common-sense knowledge and dynamic knowledge coming from the Scene analysis module and determine which goals for the system are consistent with the current situation. This set of goals is then passed to the Planning module described below.
 
 
 
@@ -97,14 +104,74 @@ In this section we describe the Markov Decision Process (MDP) used to model the 
 In this algorithm a tabu-list of actions is used to choose actions to be inserted in the policy.
 This tabu-list is built and updated by the Model updater module, described below in this section, representing the actual feedback coming from the execution layer..
 
+\vspace{1em}
+\noindent
+{\bf Task structure}
 
-\todo{MDP planner with tabu-list ... }
+The result of the reasoning module (KB module) is a set of goals $G = \{ g_{1}, g_{2}, \ldots, g_{k} \}$ concerning advertisement, patrolling, assisting and escorting.  We note also that advertising goals could be performed in parallel with the moving ones.  Consequently, the task structure is a hierarchy of modules to execute. This structure is  inspired by progressive processing units \cite{CarMouIjcai01}, that we  name PRU+. In our application, we define four PRU+. Each PRU+ is composed of levels where the first level concerns the execution of the subtask {\sc goto site $X$}, the second level concerns the advertisement at a location $(x,y)$ and the third level consists of {\sc do task $X$} where $X$ could be  the assistance, the patrolling, the escorting or the surveillance.% (see Figure \ref{FigureEscortTask}). 
+With such task structures we can also define some joint goals requiring joint PRU+.  For example, escorting a people from one location in a building to another location in the other building requires a cooperation between robots. Indeed, the first robot executes a policy of PRU+ for escorting a user to the exit of the first building, provide him/her information to reach the other building and then send information to the other robots in the other building to continue the escorting task at the second building. The structure of tasks we propose for single robot tasks is  {\sc \{goto $x$, advertisement, do $x$\}}, while for the joint task is {\sc \{goto $x$, advertisement, inform people, send message to the other robots\}}. 
+The task {\sc do $x$} concerns different tasks of assistance. 
 
+More formally, a PRU+ is defined by a set of levels $\{ l_{1}, l_{2}, \ldots, l_{k} \}$, where each level $l_i$ is composed by a set of modules $\{m_{i}^{1}, m_{i}^{2}, \ldots, m_{i}^{p_{i}} \}$ and each module $m_i^j$ is defined by different execution outcomes that we name options $\{ \alpha_{i}^{j}, \beta_{i}^{j}, \ldots \}$.  From these elements, a PRU+ language is defined allowing to define tasks as PRU+ as given in the following example.  
 
-\todo{hierarchical task structure or PRU+ is missing.
-Let explain that goals have an hierarchical task structure.
-The PRU+ description is needed to describe the MDP}
+\vspace{-1em}
+\begin{small}
+\begin{verbatim}
+<pru>
+  <Start>
+    <SVU>
+      location := RobotPos
+      desire := nil
+    </SVU>
+    <Next> 
+      1.advertise 
+      1.advertiseComplex 
+      1.interact
+    </Next>
+  </Start>
+  <Layer id='1'>
+    <StateVariable id='location' />
+    <StateVariable id='desire' />
+    <Action id='advertise'>
+      <Parameter id='X' domain='AvailableAds' />
+      <Outcome id='done' p='1.0'>
+      <Quality kind='null' const='100' />
+      <Duration kind='distance' const='3' />
+      <SVU> location := $X </SVU>
+      <Next> 
+        1.advertise 
+        1.advertiseComplex 
+        1.interact
+      </Next>
+      </Outcome>
+    </Action>
+    <Action id='advertiseComplex'>
+    ...
+</pru>
+\end{verbatim}
+\end{small}
 
+\vspace{1em}
+\noindent
+{\bf MDP definition and planning}
+
+The planning procedure consists of formalizing the robot activities as an MDP using the PRU+ task definition. This procedure is based on two steps: 1) generating an MDP from a PRU+, 2) compute the optimal policy for the generated MDP.
+In the following we define the $MDP = <S, A, R, T> $ where : 
+\begin{itemize}
+\item $S$ is a set of states defined by $[l, m, o, SVU]$ where $l$ is the level of the PRU, $m$ is a module of the level $l$, $o$ is an option of module $m$ and SVU are  state variables defining the execution context representing the subset of variables to be considered for the option $o$. 
+\item $A$ is the set of actions consisting of execution of one module of the next levels $E$ or skipping the level  $S$. 
+\item T is the transition function defined as follows : 
+\begin{itemize}
+\item $ Pr([l+1,m',o',svu'] | [l,m,o,svu], E) = p(o')$, this means when execution module $m'$ at state [$l,m,o,svu]$ we move to state $[l',m',o',svu']$ with probability p(o') representing the probability to get the outcome $o'$. % (for example executing module goto location (4,5), there is a probability p((3,5)) to get the outcome (3,5) because of uncertainty.
+\item $Pr([l+2, m' , o' , svu' ] | [l,m,o,svu], S) = 1$, this transition is deterministic because we skip level $l+1$ and we move to level $l+2$. 
+\end{itemize}
+\item R is the reward function related to the options assessing the benefit to get the outcome; 
+\end{itemize}
+
+From this definition the Bellman equation of our former, becomes : 
+\[ V([l,m,o,svu]) = R(o) + max_{E,S} \sum Pr([l',m',o',svu'] | [l,m,o,svu], a). V([l',m',o',svu'] )  \]
+
+The optimal policy $\pi$ can be computed by standard MDP solving algorithms as value-iteration algorithm. 
 
 
 \subsection{Plan execution and monitoring}
@@ -151,6 +218,7 @@ In the latter case, the executor sends to the Model updater module the following
 1) action failed, 2) condition that was checked to determine action failure, 3) status of the plan (that can contain additional conditions useful for diagnosis of the failure).
 Given this input, the Model updater module (described in the next paragraph) modifies the MDP model of the domain and activates a new planning procedure to generate a new plan (policy) that aims at avoiding at least the failure cause just occurred.
 
+\vspace{1em}
 
 \noindent
 {\bf Model update}
