--- a/doc/papers/15-RSS_aicogscirobo2015/references.bib
+++ b/doc/papers/15-RSS_aicogscirobo2015/references.bib
@@ -21,3 +21,43 @@
   year={1960},
   publisher={Citeseer}
 }
+
+@INPROCEEDINGS{Hoey99spudd,
+    author = {Jesse Hoey and Robert St-aubin and Alan Hu and Craig Boutilier},
+    title = {SPUDD: Stochastic planning using decision diagrams},
+    booktitle = {In Proceedings of the Fifteenth Conference on Uncertainty in Artificial Intelligence},
+    year = {1999},
+    pages = {279--288},
+    publisher = {Morgan Kaufmann}
+}
+
+@inproceedings{MZDecai98ws,
+  title={New directions in modeling and control of progressive processing},
+  author={Mouaddib, Abdel-Illah and Zilberstein, Shlomo and Danilchenko, Victor},
+  booktitle={ECAI},
+  volume={98},
+  year={1998}
+}
+
+@ARTICLE{Bellman57,
+    author = "Richard Bellman",
+     title = "A Markovian Decision Process",
+   journal = "Indiana Univ. Math. J.",
+  fjournal = "Indiana University Mathematics Journal",
+    volume = 6,
+      year = 1957,
+     issue = 4,
+     pages = "679--684",
+      issn = "0022-2518",
+     coden = "IUMJAB",
+   mrclass = "",
+}
+
+@book{howard1960dynamic,
+  title={Dynamic Programming and Markov Processes},
+  author={Howard, R.A.},
+  lccn={60011030},
+  url={http://books.google.fr/books?id=fXJEAAAAIAAJ},
+  year={1960},
+  publisher={Published jointly by the Technology Press of the Massachusetts Institute of Technology and}
+}
