--- a/doc/papers/15-RSS_aicogscirobo2015/intro.tex
+++ b/doc/papers/15-RSS_aicogscirobo2015/intro.tex
@@ -19,7 +19,8 @@ Output: execution and monitoring of a behavior (policy) implementing a solution 
 
 
 Execution monitoring and interleaving planning and execution are crucial features for an autonomous robot acting in a real environment, specially when human interaction is involved, 
-as for the COACHES robots. Indeed, in complex scenarios, it is not possible to model and foresee all the possible situations that may occur and plans generated at planning time, when several information about the real environment are not known, may not be optimal or feasible at execution time.
+as for the COACHES robots. Indeed, in complex scenarios, it is not possible to model and foresee all the possible situations that may occur.
+At planning time, several information about the real environment are not known. Therefore, generated plans may not be optimal or feasible at execution time.
 
 It is thus necessary to explicitly model and consider possible plan failures and to devise a mechanism that is able to properly react to these failures.
 
